--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,12 @@ jobs:
     - name: npm install and build webpack
       run: |
         npm install
-        npm run build- name: Use Node.js ${{ matrix.node-version }}
+        npm run build
+    - uses: actions/upload-artifact@main
+      with:
+        name: webpack artifacts
+        path: public/
+        
   test:
     runs-on: ubuntu-latest
     
